--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <script src="https://cdn.tailwindcss.com"></script>
  <title>Halaman Utama</title>
- <style>
-    body {
-        text-align: center;
-        background-color: whitesmoke;
-        font-family: Arial, Helvetica, sans-serif;
-    }
- </style>
+ <link rel="stylesheet" href="style1.css">
 </head>
 <body>
- <h1>Selamat Datang!</h1>
+ <h1 class="">Selamat Datang!</h1>
+ 
  <hr><img src="gojo.png" alt ="Riza Ad Dzikri Setiawan" width="200" class="rounded-circle">
- <b><i><p>Saya Riza Ad Dzikri Setiawan Saya Siswa SMK Wikrama 1 Garut Jurusan PPLG 
+ <b><i><p >Saya Riza Ad Dzikri Setiawan Saya Siswa SMK Wikrama 1 Garut Jurusan PPLG 
     , Saya Tinggal Di Garut Dan Lahir Di Garut Saya Sangat Suka Sekali Game Ketika Saya Merasa Sangat Lelah Karena Itu dapat Memberikan Hiburan Untuk Saya
  </p>
  <p><a href="profilRiza.html">Lihat Profil</a></p>
  <p><a href="tentangRiza.html">Lihat Kemampuan</a></p>
+ <p><a href="frofilteman.html">profilteman</a></p>
 </body>
 </html>
